# rust-scratch

./: .editorconfig  .gitignore  Cargo.toml  README.md
doc/: advanced_type.md  auto_testing.md  base_type.md  cargo.md  enums.md  error_handle.md  generics.md  modularize.md  ownership.md  patterns.md  structure.md  sturcture.md  type_system.md  unsafe.md
minigrep/: Cargo.toml  poem.txt
minigrep/src/: Restrcuture.md  lib.rs  main.rs
snake/: draw.rs  game.rs  main.rs  snake.rs
src/: anonymous_function.rs  async.rs  concurrent.rs  generics.rs  iterator.rs  lifecricle.rs  main.rs  oo.rs  process_control.rs  smart_pointer.rs  traits.rs
src/gof/: singleton.rs  state_monad.rs
